--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "@types/swiper": "^4.4.5",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -30,6 +32,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "ress": "^1.2.2",
+    "style-loader": "^1.0.0",
     "styled-jsx": "^3.2.2",
     "swiper": "^4.5.0",
     "typescript-fsa": "^3.0.0-beta-2",
