--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sns-react",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest",
+    "test":"jest --coverage --detectOpenHandles --forceExit",
     "dev": "next",
     "build": "next build",
     "start": "next start",
