--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,39 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
     "jsx": "preserve",
+    "lib": [
+      "dom",
+      "es2017"
+    ],
     "allowJs": true,
     "moduleResolution": "node",
+    "strict": true,
+    "noEmit": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "isolatedModules": true,
     "removeComments": false,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016"
-    ],
-    "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
+  "typeRoots": [
+    "node_modules/@types",
+    "types"
+  ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "**/*.test.ts",
-    "**/*.test.tsx"
+    ".next",
+    "next.config.js",
+    "dist",
+    "out"
   ],
   "include": [
     "next-env.d.ts",
