--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "build": "run-p build:*",
-    "build:server":"tsc --project tsconfig.server.json",
-    "build:next":"next build",
-    "test":"jest --coverage --detectOpenHandles --forceExit",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:next": "next build",
+    "test": "jest --coverage --detectOpenHandles --forceExit",
     "dev": "next",
     "start": "next start",
     "format": "prettier \"{src,pages}/**/*.{js,ts,jsx,tsx,scss}\" --write",
@@ -24,6 +24,8 @@
     ]
   },
   "dependencies": {
+    "blueimp-load-image": "^2.23.0",
+    "formik": "^1.5.8",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@types/swiper": "^4.4.5",
