--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     ]
   },
   "dependencies": {
-    "blueimp-load-image": "^2.23.0",
-    "formik": "^1.5.8",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@types/swiper": "^4.4.5",
+    "@types/yup": "^0.26.24",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "blueimp-load-image": "^2.23.0",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.1",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "formik": "^1.5.8",
     "lodash": "^4.17.15",
     "next": "latest",
     "next-redux-wrapper": "^3.0.0",
@@ -54,7 +55,8 @@
     "styled-jsx": "^3.2.2",
     "swiper": "^4.5.0",
     "typescript-fsa": "^3.0.0-beta-2",
-    "typescript-fsa-reducers": "^1.2.1"
+    "typescript-fsa-reducers": "^1.2.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
